Add real valued tests

--- a/test/Makefile
+++ b/test/Makefile
@@ -7,10 +7,13 @@ INCLUDE += -I../src/external/blis/include/haswell
 
 LIBS     = -lblis -lhptt
 
-all: clean complex
+all: clean complex real
 
 complex:
 	${CCX} ${CFLAGS} test_complex.cpp ${INCLUDE} ${LIBS} -o $@.test.o
+
+real:
+	${CCX} ${CFLAGS} test_real.cpp ${INCLUDE} ${LIBS} -o $@.test.o
 
 debug:
 	${CCX} -std=c++17 test.cpp ${INCLUDE} ${LIBS} -o $@.o
