--- a/benchmark/Makefile
+++ b/benchmark/Makefile
@@ -1,5 +1,5 @@
 CCX = g++
-CFLAGS = -std=c++17 -O3
+CFLAGS = -std=c++17 -O3 -mavx2
 
 INCLUDE += -I../include
 INCLUDE += -I../src/external/marray/marray
@@ -10,7 +10,7 @@ LIBS     = -L../src/external/blis/lib/haswell/ -lblis2
 all: clean build
 
 build:
-	${CCX} ${CFLAGS} benchmark.cpp ${INCLUDE} ${LIBS} -mavx2 -o benchmark.o
+	${CCX} ${CFLAGS} benchmark.cpp ${INCLUDE} ${LIBS} -o benchmark.o
 
 clean:
 	rm benchmark.o ||:
