Add proper CMakeLists.txt

--- a/benchmark/CMakeLists.txt
+++ b/benchmark/CMakeLists.txt
@@ -1,27 +1,7 @@
-cmake_minimum_required(VERSION 3.26)
+add_executable(benchmarkcomplex benchmark_complex.cpp)
+target_compile_features(benchmarkcomplex PRIVATE cxx_std_17)
+target_link_libraries(benchmarkcomplex PRIVATE tfctc)
 
-project(tfctc)
-
-set(CMAKE_CXX_STANDARD 17)
-set(CMAKE_CXX_STANDARD_REQUIRED True)
-set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -O3 -mavx2")
-
-find_library(BLIS_LIB "libblis.a" REQUIRED) # find library; store in BLIS_LIB
-find_file(BLIS_H blis REQUIRED) # find path to blis.h file; store in BLIS_H
-find_path(MARRAY_H "marray.hpp" REQUIRED)
-
-include_directories(
-  "${BLIS_H}"
-  "${MARRAY_H}"
-  "${CMAKE_CURRENT_SOURCE_DIR}/../src"
-  "${CMAKE_CURRENT_SOURCE_DIR}/../src/internal"
-)
-
-set(SOURCES_COMPLEX benchmark_complex.cpp "${CMAKE_CURRENT_SOURCE_DIR}/../src/tfctc.cpp")
-set(SOURCES_REAL benchmark_complex.cpp "${CMAKE_CURRENT_SOURCE_DIR}/../src/tfctc.cpp")
-
-add_executable(complex.benchmark.o "${SOURCES_COMPLEX}")
-add_executable(real.benchmark.o "${SOURCES_REAL}")
-
-target_link_libraries(complex.benchmark.o PUBLIC "${BLIS_LIB}")
-target_link_libraries(real.benchmark.o PUBLIC "${BLIS_LIB}")
+add_executable(benchmarkreal benchmark_real.cpp)
+target_compile_features(benchmarkreal PRIVATE cxx_std_17)
+target_link_libraries(benchmarkreal PRIVATE tfctc)
