--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,27 +1,28 @@
-cmake_minimum_required(VERSION 3.26)
+find_package(Git REQUIRED)
 
-project(tfctc)
-
-set(CMAKE_CXX_STANDARD 17)
-set(CMAKE_CXX_STANDARD_REQUIRED True)
-set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -O3 -mavx2")
-
-find_library(BLIS_LIB "libblis.a" REQUIRED) # find library; store in BLIS_LIB
-find_file(BLIS_H blis REQUIRED) # find path to blis.h file; store in BLIS_H
-find_path(MARRAY_H "marray.hpp" REQUIRED)
-
-include_directories(
-  "${BLIS_H}"
-  "${MARRAY_H}"
-  "${CMAKE_CURRENT_SOURCE_DIR}/../src"
-  "${CMAKE_CURRENT_SOURCE_DIR}/../src/internal"
+ExternalProject_Add(
+    doctest
+    PREFIX ${CMAKE_BINARY_DIR}/doctest
+    GIT_REPOSITORY https://github.com/doctest/doctest.git
+    TIMEOUT 10
+    UPDATE_COMMAND ${GIT_EXECUTABLE} pull
+    CONFIGURE_COMMAND ""
+    BUILD_COMMAND ""
+    INSTALL_COMMAND ""
+    LOG_DOWNLOAD ON
 )
 
-set(SOURCES_COMPLEX test_complex.cpp "${CMAKE_CURRENT_SOURCE_DIR}/../src/tfctc.cpp")
-set(SOURCES_REAL test_real.cpp "${CMAKE_CURRENT_SOURCE_DIR}/../src/tfctc.cpp")
+ExternalProject_Get_Property(doctest source_dir)
+set(DOCTEST_INCLUDE_DIR ${source_dir}/doctest CACHE INTERNAL "Path to include folder for doctest")
 
-add_executable(complex.test.o "${SOURCES_COMPLEX}")
-add_executable(real.test.o "${SOURCES_REAL}")
+add_executable(testcomplex test_complex.cpp)
+target_include_directories(testcomplex PUBLIC ${DOCTEST_INCLUDE_DIR})
+target_compile_features(testcomplex PRIVATE cxx_std_17)
+target_link_libraries(testcomplex PRIVATE tfctc)
+add_test(NAME testcomplextest COMMAND testcomplex)
 
-target_link_libraries(complex.test.o PUBLIC "${BLIS_LIB}")
-target_link_libraries(real.test.o PUBLIC "${BLIS_LIB}")
+add_executable(testreal test_complex.cpp)
+target_include_directories(testreal PUBLIC ${DOCTEST_INCLUDE_DIR})
+target_compile_features(testreal PRIVATE cxx_std_17)
+target_link_libraries(testreal PRIVATE tfctc)
+add_test(NAME testrealtest COMMAND testreal)
