--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,6 +9,7 @@ project(
 include(ExternalProject)
 include(CTest)
 
+find_package(OpenMP)
 find_library(BLIS_LIB "libblis.a" REQUIRED) # find library; store in BLIS_LIB
 find_file(BLIS_H blis REQUIRED) # find path to blis.h file; store in BLIS_H
 find_file(MARRAY_H marray REQUIRED)
