--- a/benchmark/CMakeLists.txt
+++ b/benchmark/CMakeLists.txt
@@ -1,7 +1,7 @@
 add_executable(scaling benchmark_complex.cpp)
 target_compile_features(scaling PRIVATE cxx_std_17)
-target_link_libraries(scaling PRIVATE tfctc)
+target_link_libraries(scaling PRIVATE t1m)
 
 add_executable(explicit benchmark_complex_explicit.cpp)
 target_compile_features(explicit PRIVATE cxx_std_17)
-target_link_libraries(explicit PRIVATE tfctc)
+target_link_libraries(explicit PRIVATE t1m)
