Refactor block_scatter_vector.hpp

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -26,3 +26,9 @@ target_include_directories(testreal PUBLIC ${DOCTEST_INCLUDE_DIR})
 target_compile_features(testreal PRIVATE cxx_std_17)
 target_link_libraries(testreal PRIVATE t1m)
 add_test(NAME testrealtest COMMAND testreal)
+
+add_executable(testscatter test_scatter.cpp)
+target_include_directories(testscatter PUBLIC ${DOCTEST_INCLUDE_DIR})
+target_compile_features(testscatter PRIVATE cxx_std_17)
+target_link_libraries(testscatter PRIVATE t1m)
+add_test(NAME testscattertest COMMAND testscatter)
