Include doctest using FetchContent
FetchContent downloads the project at configure time rather than build
time. This should also fix the problem that the initial build of this
project always failed on my system. Solution is taken from
https://github.com/doctest/doctest/issues/698

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,7 +6,7 @@ project(
   DESCRIPTION "Transposition-free Complex Tensor Contractions"
   LANGUAGES CXX)
 
-include(ExternalProject)
+include(FetchContent)
 include(CTest)
 
 find_package(OpenMP)
