--- a/benchmark/CMakeLists.txt
+++ b/benchmark/CMakeLists.txt
@@ -1,7 +1,6 @@
-add_executable(scaling benchmark_complex.cpp)
-target_compile_features(scaling PRIVATE cxx_std_17)
-target_link_libraries(scaling PRIVATE t1m)
+file(GLOB bench_sources "*.cpp") # Find all .cpp test files.
 
-add_executable(explicit benchmark_complex_explicit.cpp)
-target_compile_features(explicit PRIVATE cxx_std_17)
-target_link_libraries(explicit PRIVATE t1m)
+set(CMAKE_BUILD_TYPE Release)
+add_executable(bench_t1m ${bench_sources})
+target_link_libraries(bench_t1m PRIVATE t1m)
+target_link_libraries(bench_t1m PRIVATE ${BLIS_LIBRARIES})
