--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,6 +8,9 @@ project(
 
 set(CMAKE_CXX_STANDARD 23)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
+set(CMAKE_CXX_FLAGS "-Wall -Wextra")
+set(CMAKE_CXX_FLAGS_DEBUG "-g -fsanitize=address,undefined")
+set(CMAKE_CXX_FLAGS_RELEASE "-O3")
 
 include(CMakePrintHelpers)
 include(FetchContent)
@@ -36,6 +39,6 @@ if(T1M_BUILD_TEST)
   add_subdirectory(test)
 endif()
 
-# if(T1M_BUILD_BENCHMARK)
-#   add_subdirectory(benchmark)
-# endif()
+if(T1M_BUILD_BENCHMARK)
+  add_subdirectory(benchmark)
+endif()
