--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,7 +8,7 @@ project(
 
 set(CMAKE_CXX_STANDARD 23)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
-set(CMAKE_CXX_FLAGS "-Wall -Wextra")
+set(CMAKE_CXX_FLAGS "-Wall -Wextra -Rpass=loop-vectorize")
 set(CMAKE_CXX_FLAGS_DEBUG "-g -fsanitize=address,undefined")
 set(CMAKE_CXX_FLAGS_RELEASE "-O3")
 
