--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,17 +8,22 @@ project(
 
 set(CMAKE_CXX_STANDARD 23)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
-set(CMAKE_CXX_FLAGS "-Wall -Wextra -Rpass=loop-vectorize")
+set(CMAKE_CXX_FLAGS "-Wall -Wextra")
 set(CMAKE_CXX_FLAGS_DEBUG "-g -fsanitize=address,undefined")
 set(CMAKE_CXX_FLAGS_RELEASE "-O3")
+
+if (CMAKE_CXX_COMPILER_ID STREQUAL "Clang")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Rpass=loop-vectorize")
+endif()
 
 include(CMakePrintHelpers)
 include(FetchContent)
 include(CTest)
 
-find_library(BLIS_LIBRARIES blis REQUIRED)
+find_library(BLIS_LIBRARIES "libblis.a" REQUIRED)
 find_file(BLIS_INCLUDE_DIRS blis REQUIRED)
-find_package(OpenMP)
+
+cmake_print_variables(BLIS_LIBRARIES)
 
 # Build header-only library.
 add_library(t1m INTERFACE)
@@ -31,7 +36,7 @@ target_include_directories(t1m INTERFACE
 if(T1M_BUILD_TEST)
   FetchContent_Declare(
     googletest
-    URL https://github.com/google/googletest/archive/03597a01ee50ed33e9dfd640b249b4be3799d395.zip
+    URL https://github.com/google/googletest/archive/refs/tags/v1.17.0.zip
   )
   set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
   FetchContent_MakeAvailable(googletest)
